# lab6

./: Makefile  README.md  initial_data.json  main.py  pyproject.toml  st_demo.py
.github/workflows/: check.yml
